--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -7,8 +7,8 @@
         <div *ngFor="let option of options">
           <div *isAllow="option.allowed">
             <div class="mt-1 font-montserrat" mat-subheader>{{option.header | translate | uppercase}}</div>
-            <mat-list-option class="font-montserrat" *ngFor="let element of option.elements" [value]="element" [disabled]="element.disabled" [selected]="element.selected">
-              <div class="d-flex align-items-center" routerLink="{{element.url}}">
+            <mat-list-option class="font-montserrat" *ngFor="let element of option.elements" [value]="element" [disabled]="element.disabled" [selected]="element.selected" routerLink="{{element.url}}">
+              <div class="d-flex align-items-center">
                 <mat-icon>{{element.icon}}</mat-icon>
                 <span class="ml-4">{{element.name | translate}}</span>
               </div>
